# eegdev

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README_build  autogen.sh  configure.ac  meson.build  meson_options.txt  project.config  rpl_modules
auxconfig/: 50-usb-plugdev.rules
config/api-exports/: meson.build
debian/: changelog  control  copyright  eegdev-plugins-free.install  eegdev-plugins-free.udev  eegdev-plugins-gtec.install  eegdev-plugins-gtec.udev  libeegdev-dev.examples  libeegdev-dev.install  libeegdev0-dev.examples  libeegdev0-dev.install  libeegdev0-free.install  libeegdev0-free.udev  libeegdev0-gtec.install  libeegdev0-gtec.symbols  libeegdev0-gtec.udev  libeegdev0.install  libeegdev0.symbols  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
devtools/: meson.build
doc/: .gitignore  Makefile.am  conf.py  eegdev-arduino.5  eegdev-barv.5  eegdev-bbt.5  eegdev-biosemi.5  eegdev-datafile.5  eegdev-gtec.5  eegdev-gtecnet.5  eegdev-neurosky.5  eegdev-open-options.5  eegdev-tobiia.5  eegdev.rst  eegdev.texi  egd_acq_setup.3  egd_channel_info.3  egd_close.3  egd_get_available.3  egd_get_cap.3  egd_get_data.3  egd_get_numch.3  egd_open.3  egd_open.3.in  egd_sensor_name.3  egd_sensor_type.3  egd_start.3  egd_stop.3  index.rst  meson.build
doc/device/: biosemi-64ch-mapping.txt
doc/example/: Makefile  eegdev_acq.c
doc/examples/: .gitignore  Makefile.am  Makefile.in  README  meson.build  testexamples.sh
doc/examples/library-usage/: acquisition.c  acquisition.h  eegdev_acq.c  recinxdf.c
doc/examples/plugin/: Makefile.in  README  saw.c
doc/internals/: user-core-backend.dia
gnulib-local/: Makefile.am
gnulib-local/lib/: clock_gettime.c  clock_nanosleep.c  decl-dlfcn.h  dlopen.c  portable-time.h
gnulib-local/modules/: clock-functions  dlopen  search-winfuncs
lib/: .gitignore  Makefile.am  clock_gettime.c  clock_gettime.h  clock_nanosleep.c  clock_nanosleep.h  convfiletime.h  decl-dlfcn.h  dlopen.c  portability.c  timespec.h
m4/: .gitignore  funcarg.m4  gnulib-cache.m4
mmpack/: specs
src/: Makefile.am  biosemi.c  biosemi.h  device-helper.c  device-helper.h  devices.h  eegdev-common.h  eegdev-open.c  eegdev-procdev.h  eegdev-types.c  eegdev-types.h  eegdev.c  eegdev.h  eegdev.pc.in  exports.sym  fileout.c  fileout.h  gtec-procdev.c  gtec.c  gtec.h  neurosky.c  neurosky.h  procdev-child.c  procdev-common.h  procdev-parent.c  usb_comm.c  usb_comm.h
src/core/: Makefile.am  conffile.h  conffile.l  conffile.y  configuration.c  configuration.h  configuration.l  configuration.y  confline.h  confline.l  confline.y  confparser.h  core.c  coreinternals.h  device-helper.c  eegdev-common.h  eegdev-pluginapi.h  eegdev.h  meson.build  opendev.c  sensortypes.c  typecast.c
src/plugins/: Makefile.am  RecorderRDA.h  arduino.c  barv.c  bbt.c  biosemi.c  biosemi.conf  cross-socket.h  device-helper.c  device-helper.h  fileout.c  gtec.c  gtecnet.c  gusbamp-loader.c  gusbamp-loader.h  gusbamp-types.h  meson.build  neurosky.c  tobiia.c  usb_comm.c  usb_comm.h
tests/: .gitignore  Makefile.am  meson.build  sysbiosemi.c  syseegfile.c  sysgtec.c  sysneurosky.c  systobiia.c  testfakeact2.sh  testfakegtec.c  testfakegtec.sh  testfaketobiia.sh  verify-cast.sh  verifycast.c  verifysplit.c
tests/conffiles/: biosemi.conf  datafile.conf  eegdev.conf  gtec.conf
tests/fakelibs/: Makefile.am  activetwo.c  fakeact2.h  fakegtec.h  gusbamp.c  tia-server.c  tia-server.h  time-utils.h
